syntax = "proto3";
package proto;
option go_package = "./proto";

import "common.proto";
import "google/protobuf/timestamp.proto";

service AccountService {
    rpc Create(CreateAccount) returns (AccountDetails);
    rpc GetById(Id) returns (AccountDetails);
    rpc EditById(EditAccount) returns (AccountDetails);
    rpc SoftDeleteById(Id) returns (StatusResponse);
    rpc RecoverAccountById(Id) returns (StatusResponse);
}

message CreateAccount {
    string full_name = 1;
    string email = 2;
    string cpf = 3;
    google.protobuf.Timestamp birth_date = 4;
    string passwd = 5;
    string two_factor_code = 6;
    CreateAccountLocation location = 7;
}

message CreateAccountLocation {
    string cep = 1;
    string country = 2;
    string state = 3;
    string city = 4;
    string neighborhood = 5;
    string street = 6;
    int64 place_number = 7;
    string complement = 8;
}



message AccountDetails {
    int64 id = 1;
    string full_name = 2;
    string email = 3;
    string cpf = 4;
    google.protobuf.Timestamp birth_date = 5;
    string passwd = 6;
    string two_factor_code = 7;
    AccountLocationDetails location = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
    bool soft_deleted = 11;
}

message AccountLocationDetails {
    int64 id = 1;
    int64 id_account = 2;
    string cep = 3;
    string country = 4;
    string state = 5;
    string city = 6;
    string neighborhood = 7;
    string street = 8;
    int64 place_number = 9;
    string complement = 10;
}



message EditAccount {
    int64 id = 1;
    string full_name = 2;
    string email = 3;
    string cpf = 4;
    google.protobuf.Timestamp birth_date = 5;
    string passwd = 6;
    EditAccountLocation location = 8;
}

message EditAccountLocation {
    string cep = 1;
    string country = 2;
    string state = 3;
    string city = 4;
    string neighborhood = 5;
    string street = 6;
    int64 place_number = 7;
    string complement = 8;
}